--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dio": "0.0.3",
     "dote": "^1.1.0",
+    "moment": "^2.29.1",
     "regenerator-runtime": "^0.13.7"
   }
 }
