--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./index.html"
+    "start": "parcel ./index.html",
+    "build": "parcel build ./index.html",
+    "surge": "surge -d https://leo-weather-app.surge.sh dist"
   },
   "keywords": [],
   "author": "",
